# stagecanvas

./: .gitignore  Makefile  README.md  bench-report.json  convo.md  convo2.md  convo3.md  convo4.md
orchestration-server/: README.md  pyproject.toml
orchestration-server/app/: __init__.py  auth.py  cluster_manager.py  collaboration.py  command_ledger.py  config.py  main.py  media_browser.py  metadata_extractor.py  models.py  registry.py  sync_manager.py  timeline_repository.py
orchestration-server/scripts/: mock_node.py
orchestration-server/tests/: test_archiver.py  test_artnet_server.py  test_asset_transfer_stub.py  test_asset_transfer_worker.py  test_auth_rbac.py  test_drift_classification.py  test_drift_history.py  test_e2e_playback.py  test_failover.py  test_idempotency_integration.py  test_mapping_config_flow.py  test_mapping_config_schema.py  test_media_profile_validation.py  test_media_registry.py  test_media_storage_stub.py  test_media_transfer_worker.py  test_media_upload.py  test_midi_handler.py  test_operator_contracts.py  test_operator_snapshot_reliability.py  test_osc_server.py  test_phase9_qa.py  test_play_at_preload_gate.py  test_preload_contract.py  test_preload_contract_v2.py  test_preload_reliability.py  test_preview_image_stub.py  test_preview_pipeline_stub.py  test_reconnect_replay_reliability.py  test_sustained_drift_alerts.py  test_timeline_model_v2.py  test_timeline_repository.py  test_transcoding_queue_stub.py  test_trigger_stub.py  test_two_node_sync_proof.py
render-node/: README.md  pyproject.toml  requirements.txt
render-node/app/: agent.py  (+10 more)
(+143 files in other folders)
