[project]
name = "stagecanvas-orchestration-server"
version = "0.1.0"
description = "StageCanvas orchestration server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "python-osc>=1.8.3",
  "mido>=1.3.2",
  "python-rtmidi>=1.5.8",
  "ffmpeg-python>=0.2.0",
  "zeroconf>=0.132.0",
  "python-multipart",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "watchdog>=4.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
