[project]
name = "stagecanvas-render-node"
version = "0.1.0"
description = "StageCanvas render node agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "aiortc>=1.6.0",
  "av>=11.0.0",
]

[project.scripts]
stagecanvas-render-node = "app.agent:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

